added project and code refactoring

--- a/index.html
+++ b/index.html
@@ -1,57 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <title>Kapil Londhe</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="KL.PNG" type="image/x-icon">
-        <link rel="shortcut icon" href="KL.PNG" type="image/x-icon">
-        <meta name="description" content="Kapil Londhe is a skilled full-stack developer, passionate about technology. Outside of work, he enjoy pursuing interests in psychology, cycling, and swimming.
-        Kapil Londhe is a contract employee at Siemens Digital Industries Software, Pune, actively contributing to the development of Teamcenter Active Workspace as a member of the Parameters Management team within Teamcenter Model Based System Engineering (MBSE). Proficient in frontend development, Kapil specializes in creating responsive and user-friendly interfaces using HTML, CSS, JavaScript, and React. With extensive experience in the software development lifecycle, Kapil engages in gathering requirements, designing, testing, deploying, and maintaining applications.
-
-        Having implemented effective strategies, Kapil significantly reduced syslog errors in the backend, leading to a remarkable decrease in error count. Additionally, Kapil resolved Coverity issues in both frontend and backend code, thereby enhancing code quality and security. Adopting test-driven development methodologies using Jest for frontend and GTest for backend code, Kapil ensures the robustness and reliability of software products.
-        
-        Collaborating closely with cross-functional teams, including designers, product managers, and quality assurance, Kapil ensures seamless integration and delivery of high-quality software products. Kapil's domain expertise lies in Product Lifecycle Management, demonstrated through the development of diagnostic tools for simulation platforms to interface with Teamcenter, ensuring connectivity and data integrity.
-        
-        Programming languages in Kapil's repertoire include JavaScript, C++, HTML, Python, and CSS. Kapil is adept at utilizing frameworks and libraries such as React.js, Node.js, Express.js, Next.js, Redux, Jest, D3.js, and Prisma. Proficient in working with databases like MongoDB and MySQL, Kapil also possesses skills in tools like VS Code, VS Studio, GitHub, Babel, Webpack, REST API, and Agile methodologies.
-        ">
-        <meta name="keywords" content="Software Engineer, JavaScript, React.js, web apps, problem-solving, collaboration, HTML, CSS, Redux, Node.js, Express.js, MongoDB, MySQL, Babel, Webpack, VS code, VS Studio, Eclipse">
-        <meta name="author" content="Kapil Londhe">
-    </head>
-    <body>
-        <div class="header">
-            <a href="/" class="headerLinkSelected">
-                <h3>Home  </h1>
+<head>
+    <link rel="stylesheet" href="index.css">
+    <title>Kapil Londhe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="KL.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="KL.PNG" type="image/x-icon">
+    <meta name="description" content="Kapil Londhe is a skilled full-stack developer, passionate about technology. He enjoys interests in psychology, cycling, and swimming. He is a contract employee at Siemens Digital Industries Software, Pune, contributing to Teamcenter Active Workspace.">
+    <meta name="keywords" content="Software Engineer, JavaScript, React.js, web apps, problem-solving, collaboration, HTML, CSS, Redux, Node.js, Express.js, MongoDB, MySQL, Babel, Webpack, VS code, VS Studio, Eclipse">
+    <meta name="author" content="Kapil Londhe">
+</head>
+<body>
+    <div class="header">
+        <a href="/" class="headerLinkSelected">
+            <h3>Home</h3>
+        </a>
+        <a href="projects.html" class="headerLinks">
+            <h3>Projects</h3>
+        </a>
+        <a href="gallery.html" class="headerLinks">
+            <h3>Gallery</h3>
+        </a>
+        <a href="Blog.html" class="headerLinks">
+            <h3>Blog</h3>
+        </a>
+        <a href="resume.html" class="headerLinks">
+            <h3>Resume</h3>
+        </a>
+    </div>
+    <div class="bodyContainer">
+        <div class="name"><h1>Kapil Londhe</h1></div>
+        <div class="icons">
+            <a href="https://www.linkedin.com/in/kapillondhe/" target="_blank" class="iconLink">
+                <img src="./Logo/linkedin.svg" alt="LinkedIn icon" class="linkicon" title="LinkedIn">
             </a>
-            <a href="projects.html" class="headerLinks" >
-                <h3>Projects  </h1>
+            <a href="https://github.com/kapillondhe" target="_blank" class="iconLink">
+                <img src="./Logo/github.svg" alt="GitHub icon" class="linkicon" title="GitHub">
             </a>
-            <a href="gallery.html" class="headerLinks" >
-                <h3>Gallery  </h1>
+            <a href="mailto:kapillondhe25@gmail.com" class="iconLink">
+                <img src="./Logo/mail.svg" alt="Email icon" class="linkicon" title="Email to kapillondhe25@gmail.com">
             </a>
-            <a href="Blog.html" class="headerLinks" >
-                <h3>Blog  </h1>
-            </a>
-            <a href="resume.html" class="headerLinks">
-                <h3>Resume</h1>
+            <a href="https://strava.app.link/3lrskjcXcJb" class="iconLink">
+                <img src="./Logo/strava.svg" alt="Strava icon" class="linkicon" title="Strava">
             </a>
         </div>
-        <div class="bodyContainer">
-            <div class="name"><h1>Kapil Londhe</h1></div>
-            <div class="icons">
-                <a href="https://www.linkedin.com/in/kapillondhe/" target="_blank" class="iconLink">
-                    <img src="./Logo/linkedin.svg" alt="Linkedin icon" class="linkicon" title="Linkedin">
-                </a>
-                <a href="https://github.com/kapillondhe" target="_blank" class="iconLink">
-                    <img src="./Logo/github.svg"  alt="Github icon" class="linkicon" title="Github">
-                </a>
-                <a href="mailto:kapillondhe25@gmail.com" class="iconLink">
-                    <img src="./Logo/mail.svg" alt="Email icon" class="linkicon"  title="Email to kapillondhe25@gmail.com">
-                </a>
-                <a href="https://strava.app.link/3lrskjcXcJb" class="iconLink">
-                    <img src="./Logo/strava.svg" alt="Strava icon" class="linkicon"  title="Strava">
-                </a>
-            </div>
-        </div>
-    </body>
+    </div>
+</body>
 </html>
