--- a/projects.html
+++ b/projects.html
@@ -1,86 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <title>Kapil Londhe</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Projects made by Kapil Londhe">
-        <link rel="icon" href="KL.PNG" type="image/x-icon">
-    </head>
-    <body>
-        <div class="header">
-            <a href="/" class="headerLinks">
-                <h3>Home  </h1>
-            </a>
-            <a href="projects.html" class="headerLinkSelected" >
-                <h3>Projects  </h1>
-            </a>
-            <a href="gallery.html" class="headerLinks" >
-                <h3>Gallery  </h1>
-            </a>
-            <a href="Blog.html" class="headerLinks" >
-                <h3>Blog  </h1>
-            </a>
-            <a href="resume.html" class="headerLinks">
-                <h3>Resume</h1>
-            </a>
-        </div>
-        <div >
-            <h1 style="text-align: center;">Projects</h1>
-        </div>
-        <div class="projectContainer">
-            <div class="project">
-                <img class="projectLogo" src="./Projects/Siemens logo.webp" alt="MBSE Parameters Management">
-                <div class="project-description">
-                    <h2>MBSE Parameters Management </h2>
-                    <p>
-                        Teamcenter MBSE Parameter Management helps manage industrial parameters in the MBSE workflow.<br>Designed a user interface to display industrial parameters.
-                    </p>
-                    <div >
-                        <a href="https://youtu.be/xwXw7BAZt3Q?si=xhpuCeXNwV_8A5FN" target="_blank" style="text-decoration: none;">
-                            <img src="./Logo/youtube.svg" style="width: 25px; padding: 5px;" alt="Youtube icon"></img>
-                        </a>
-                    </div>
+<head>
+    <link rel="stylesheet" href="index.css">
+    <title>Kapil Londhe</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Projects made by Kapil Londhe">
+    <link rel="icon" href="KL.PNG" type="image/x-icon">
+</head>
+<body>
+    <div class="header">
+        <a href="/" class="headerLinks">
+            <h3>Home</h3>
+        </a>
+        <a href="projects.html" class="headerLinkSelected">
+            <h3>Projects</h3>
+        </a>
+        <a href="gallery.html" class="headerLinks">
+            <h3>Gallery</h3>
+        </a>
+        <a href="Blog.html" class="headerLinks">
+            <h3>Blog</h3>
+        </a>
+        <a href="resume.html" class="headerLinks">
+            <h3>Resume</h3>
+        </a>
+    </div>
+    <div>
+        <h1 style="text-align: center;">Projects</h1>
+    </div>
+    <div class="projectContainer">
+        <div class="project">
+            <img class="projectLogo" src="./Projects/Siemens logo.webp" alt="MBSE Parameters Management">
+            <div class="project-description">
+                <h2>MBSE Parameters Management</h2>
+                <p>
+                    Teamcenter MBSE Parameter Management helps manage industrial parameters in the MBSE workflow.<br>Designed a user interface to display industrial parameters.
+                </p>
+                <div>
+                    <a href="https://youtu.be/xwXw7BAZt3Q?si=xhpuCeXNwV_8A5FN" target="_blank" style="text-decoration: none;">
+                        <img src="./Logo/youtube.svg" style="width: 25px; padding: 5px;" alt="Youtube icon">
+                    </a>
                 </div>
             </div>
-
-            <div class="project">
-                <img class="projectLogo" src="./Projects/Siemens logo.webp" alt="MBSE Integrations">
-                <div class="project-description">
-                    <h2>MBSE Integrations </h2>
-                    <p>
-                        Engineered a diagnostic tool utilized by diverse simulation platforms (e.g., Matlab) to interface with Teamcenter,ensuring robust connectivity and data integrity.
-                    </p>
-                    <div >
-
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="project">
-                <img class="projectLogo" src="./Projects/ASL.png" alt="American Sign Language recognition">
-                <div class="project-description">
-                    <h2>American Sign Language recognition</h2>
-                    <p>
-                        This project introduces an innovative solution aimed at breaking down communication barriers for individuals who lack sign language proficiency or face challenges accessing sign language interpreters. By leveraging state-of-the-art technology, this project achieves a remarkable 98.23% accuracy rate in recognizing American Sign Language (ASL) alphabets.
-                    </p>
-                    <div >
-                        <a href="https://youtu.be/M8GeFaekfMY" target="_blank" style="text-decoration: none;">
-                            <img src="./Logo/youtube.svg" style="width: 25px; padding: 5px;" alt="Youtube icon"></img>
-                        </a>
-                        <a href="https://github.com/kapillondhe/American-sign-language-recognition" target="_blank" style="text-decoration: none;">
-                            <img src="./Logo/github.svg" style="width: 22px;padding: 5px;" alt="Github icon"></img>
-                        </a>
-                        <a href="https://www.kaggle.com/datasets/kapillondhe/american-sign-language" target="_blank" style="text-decoration: none;">
-                            <img src="./Logo/kaggle.svg" style="width: 22px;padding: 5px;" alt="Kaggle icon"></img>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            
-            
         </div>
-    </body>
+
+        <div class="project">
+            <img class="projectLogo" src="./Projects/Siemens logo.webp" alt="MBSE Integrations">
+            <div class="project-description">
+                <h2>MBSE Integrations</h2>
+                <p>
+                    Engineered a diagnostic tool utilized by diverse simulation platforms (e.g., Matlab) to interface with Teamcenter, ensuring robust connectivity and data integrity.
+                </p>
+                <div></div>
+            </div>
+        </div>
+
+        <div class="project">
+            <img class="projectLogo" src="./Projects/ASL.png" alt="American Sign Language recognition">
+            <div class="project-description">
+                <h2>American Sign Language recognition</h2>
+                <p>
+                    This project introduces an innovative solution aimed at breaking down communication barriers for individuals who lack sign language proficiency or face challenges accessing sign language interpreters. By leveraging state-of-the-art technology, this project achieves a remarkable 98.23% accuracy rate in recognizing American Sign Language (ASL) alphabets.
+                </p>
+                <div>
+                    <a href="https://youtu.be/M8GeFaekfMY" target="_blank" style="text-decoration: none;">
+                        <img src="./Logo/youtube.svg" style="width: 25px; padding: 5px;" alt="Youtube icon">
+                    </a>
+                    <a href="https://github.com/kapillondhe/American-sign-language-recognition" target="_blank" style="text-decoration: none;">
+                        <img src="./Logo/github.svg" style="width: 22px;padding: 5px;" alt="Github icon">
+                    </a>
+                    <a href="https://www.kaggle.com/datasets/kapillondhe/american-sign-language" target="_blank" style="text-decoration: none;">
+                        <img src="./Logo/kaggle.svg" style="width: 22px;padding: 5px;" alt="Kaggle icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project">
+            <img class="projectLogo" src="./Projects/sih-logo.png" alt="Power consumption monitoring system">
+            <div class="project-description">
+                <h2>Power consumption monitoring system</h2>
+                <p>
+                    Developed a comprehensive real-time power monitoring solution for industry, including a web application to monitor voltage, current, power, and power factor of individual machines.
+                </p>
+                <div>
+                    <a href="https://sggs.ac.in/source/Hackathon-Achievement-18-19.pdf" target="_blank" style="text-decoration: none;">
+                        <img src="./Logo/website.svg" style="width: 22px;padding: 5px;" alt="Website icon">
+                    </a>
+                </div>
+                <div>
+                    <img class="projectImage" src="Projects/circuit diagram.jpeg">
+                    <img class="projectImage" src="Projects/PCB front.jpeg">
+                    <img class="projectImage" src="Projects/PCB back.jpeg">
+                </div>
+            </div>
+        </div>
+
+        <div id="myModal" class="modal">
+            <span class="close">&times;</span>
+            <div class="modal-content">
+                <img id="modal-img" src="" alt="Zoomed image">
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // Wait for the DOM to load
+        document.addEventListener("DOMContentLoaded", function() {
+            // Get modal element
+            var modal = document.getElementById("myModal");
+            var modalImg = document.getElementById("modal-img");
+            var closeBtn = document.getElementsByClassName("close")[0];
+
+            // Get all images
+            var images = document.querySelectorAll(".projectImage");
+
+            // Add click event to each image
+            images.forEach(function(image) {
+                image.onclick = function() {
+                    modal.style.display = "flex";
+                    modalImg.src = this.src;
+                };
+            });
+
+            // Close modal when clicking on the close button
+            closeBtn.onclick = function() {
+                modal.style.display = "none";
+            };
+
+            // Close modal when clicking outside of the image
+            window.onclick = function(event) {
+                if (event.target === modal) {
+                    modal.style.display = "none";
+                }
+            };
+        });
+    </script>
+</body>
 </html>
