Removed Resume tab

--- a/Blog.html
+++ b/Blog.html
@@ -24,9 +24,9 @@
             <a href="Blog.html" class="headerLinkSelected" >
                 <h3>Blog  </h1>
             </a>
-            <a href="resume.html" class="headerLinks">
+            <!-- <a href="resume.html" class="headerLinks">
                 <h3>Resume</h1>
-            </a>
+            </a> -->
         </div>
         <div >
             <h1 style="text-align: center;">Blogs</h1>
