--- a/index.html
+++ b/index.html
@@ -1,49 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <link rel="stylesheet" href="index.css" />
     <title>Kapil Londhe</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="KL.PNG" type="image/x-icon">
-    <link rel="shortcut icon" href="KL.PNG" type="image/x-icon">
-    <meta name="description" content="Kapil Londhe is a skilled full-stack developer, passionate about technology. He enjoys interests in psychology, cycling, and swimming. He is a contract employee at Siemens Digital Industries Software, Pune, contributing to Teamcenter Active Workspace.">
-    <meta name="keywords" content="Software Engineer, JavaScript, React.js, web apps, problem-solving, collaboration, HTML, CSS, Redux, Node.js, Express.js, MongoDB, MySQL, Babel, Webpack, VS code, VS Studio, Eclipse">
-    <meta name="author" content="Kapil Londhe">
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="KL.PNG" type="image/x-icon" />
+    <link rel="shortcut icon" href="KL.PNG" type="image/x-icon" />
+    <meta
+      name="description"
+      content="Kapil Londhe is a skilled full-stack developer, passionate about technology. He enjoys interests in psychology, cycling, and swimming. He is a contract employee at Siemens Digital Industries Software, Pune, contributing to Teamcenter Active Workspace."
+    />
+    <meta
+      name="keywords"
+      content="Software Engineer, JavaScript, React.js, web apps, problem-solving, collaboration, HTML, CSS, Redux, Node.js, Express.js, MongoDB, MySQL, Babel, Webpack, VS code, VS Studio, Eclipse"
+    />
+    <meta name="author" content="Kapil Londhe" />
+  </head>
+  <body>
     <div class="header">
-        <a href="/" class="headerLinkSelected">
-            <h3>Home</h3>
-        </a>
-        <a href="projects.html" class="headerLinks">
-            <h3>Projects</h3>
-        </a>
-        <a href="gallery.html" class="headerLinks">
-            <h3>Gallery</h3>
-        </a>
-        <a href="Blog.html" class="headerLinks">
-            <h3>Blog</h3>
-        </a>
-        <a href="resume.html" class="headerLinks">
+      <a href="/" class="headerLinkSelected">
+        <h3>Home</h3>
+      </a>
+      <a href="projects.html" class="headerLinks">
+        <h3>Projects</h3>
+      </a>
+      <a href="gallery.html" class="headerLinks">
+        <h3>Gallery</h3>
+      </a>
+      <a href="Blog.html" class="headerLinks">
+        <h3>Blog</h3>
+      </a>
+      <!-- <a href="resume.html" class="headerLinks">
             <h3>Resume</h3>
-        </a>
+        </a> -->
     </div>
     <div class="bodyContainer">
-        <div class="name"><h1>Kapil Londhe</h1></div>
-        <div class="icons">
-            <a href="https://www.linkedin.com/in/kapillondhe/" target="_blank" class="iconLink">
-                <img src="./Logo/linkedin.svg" alt="LinkedIn icon" class="linkicon" title="LinkedIn">
-            </a>
-            <a href="https://github.com/kapillondhe" target="_blank" class="iconLink">
-                <img src="./Logo/github.svg" alt="GitHub icon" class="linkicon" title="GitHub">
-            </a>
-            <a href="mailto:kapillondhe25@gmail.com" class="iconLink">
-                <img src="./Logo/mail.svg" alt="Email icon" class="linkicon" title="Email to kapillondhe25@gmail.com">
-            </a>
-            <a href="https://strava.app.link/3lrskjcXcJb" class="iconLink">
-                <img src="./Logo/strava.svg" alt="Strava icon" class="linkicon" title="Strava">
-            </a>
-        </div>
+      <div class="name"><h1>Kapil Londhe</h1></div>
+      <div class="icons">
+        <a
+          href="https://www.linkedin.com/in/kapillondhe/"
+          target="_blank"
+          class="iconLink"
+        >
+          <img
+            src="./Logo/linkedin.svg"
+            alt="LinkedIn icon"
+            class="linkicon"
+            title="LinkedIn"
+          />
+        </a>
+        <a
+          href="https://github.com/kapillondhe"
+          target="_blank"
+          class="iconLink"
+        >
+          <img
+            src="./Logo/github.svg"
+            alt="GitHub icon"
+            class="linkicon"
+            title="GitHub"
+          />
+        </a>
+        <a href="mailto:kapillondhe25@gmail.com" class="iconLink">
+          <img
+            src="./Logo/mail.svg"
+            alt="Email icon"
+            class="linkicon"
+            title="Email to kapillondhe25@gmail.com"
+          />
+        </a>
+        <a href="https://strava.app.link/3lrskjcXcJb" class="iconLink">
+          <img
+            src="./Logo/strava.svg"
+            alt="Strava icon"
+            class="linkicon"
+            title="Strava"
+          />
+        </a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
